add api to path

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                 imgElement.src = URL.createObjectURL(file);
             }
 
-            const response = await fetch('/upload', {
+            const response = await fetch('/api/upload', {
                 method: 'POST',
                 body: formData,
             });
